fix styling with rules overlapping and score text not displaying on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,8 +182,8 @@ hr {
 /* Rules Area */
 #rules-container {
     width: 80%;
-    height: 100vh;
-    max-height: 450px;
+    height: auto;
+    max-height: 600px;
     box-sizing: border-box;
     border: solid 5px #170e1a;
     padding: 1px;
@@ -222,11 +222,19 @@ hr {
     #scores {
         padding: 20px;
     }
+
+    #rules-container {
+        font-size: 1rem;
+    }
 }
 
 /* Media Query for Screens of 700px or less */
 @media (max-width: 700px) {
     .btn {
         width: 50%;
+    }
+
+    #correct-text, #incorrect-text {
+        display: none;
     }
 }
